# game-haskell

./: CHANGELOG.md  LICENSE  README.md  brickbreaker.cabal  brickbreaker.hs
.github/workflows/: haskell.yml
app/: Audio.hs  Game.hs  GameLogic.hs  Main.hs
test/: GameTests.hs
