cabal-version: >=1.10
name:                BrickBreaker
version:             0.1.0.0
build-type:          Simple

library game-lib
    hs-source-dirs:      app
    exposed-modules:     GameLogic
    other-modules:       Main
    build-depends:       base >=4.7 && <5,
                         gloss,
                         HUnit,
                         QuickCheck
    default-language:    Haskell2010

executable brickbreaker-exe
    main-is:             Main.hs
    hs-source-dirs:      app
    build-depends:       base >=4.7 && <5,
                         gloss,
                         game-lib
    default-language:    Haskell2010

test-suite brickbreaker-tests
    type:              exitcode-stdio-1.0
    main-is:           GameTests.hs
    hs-source-dirs:    test
    build-depends:     base >=4.7 && <5,
                       gloss,
                       HUnit,
                       QuickCheck,
                       game-lib
    default-language:  Haskell2010